KTS-1589 "Enabling and adding text to the disclaimer script for the login window seems to break the layout. " Fixed.
Reviewed By: Kevin

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@6510 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-ie-icons.css
+++ b/resources/css/kt-ie-icons.css
@@ -214,17 +214,17 @@
 }
 
 #loginbox.hasDisclaimer #loginboxLeftTop {
-    height: 250px;
+    height: 260px;
 }
 
 #loginbox.hasDisclaimer #loginboxLeftBottom {
-    height: 250px;
+    height: 260px;
 }
 
 #loginbox.hasDisclaimer #loginboxRightTop {
-    height: 250px;
+    height: 260px;
 }
 
 #loginbox.hasDisclaimer #loginboxRightBottom {
-    height: 250px;
+    height: 260px;
 }
